
    +d 0751 1000 1000 11 0 /home/miekg/bin
    +h 0700 1000 1000 44 21 /home/miekg/bin/acx2 -> /home/miekg/bin/cx
    +h 0700 1000 1000 51 28 /home/miekg/bin/cx-hardlink -> /home/miekg/bin/cx
    +l 0777 1000 1000 24 18 /home/miekg/bin/t -> tt
    +- 0775 1000 1000 21 174 /home/miekg/bin/wifi

 * added gpg encryption/decryption to rdup-simple and rdup-restore
   (requested by: Jan Spakula)
 * killed off rdup-cp and put that functionality in rdup-snap
 * implemented gettext for i18n and added Dutch as
   a language for rdup, the perl utils, but not the shell
   scripts. Those can be easily rewritten in another language
 * exit ./configure when glib2-dev is not found
 * substract the filesize when files are removed in rdup-snap
 * remove last remnants of syslog from shared.pl.in
 * fixed example cron.rdup
 * use here docs in the shell script usage
 * update rdup-restore and removed rdup-snap-here
 * documentation updates and assorted tweaks
 * removed last remants of rdup-snap-here
 * used lintian on the debian packages


19 Mar 2008: 0.5.7 Miek <miek@miek.nl>
 -- spring cleaning --
 * removed rdup-purge, this can be done in a shell oneliner
 * removed sh-tools/ as it was already deprecated
 * added rdup-hist to show files from the backup and copy, cat
   or diff them. Also see rdup-hist.1
 * Remove syslogging from rdup-snap for the sake of simplicity.
   It also gave troubles on Mac OS X.
 * make the rdup-backups.1 page look nicer
   

15 Mar 2008: 0.5.6 Miek <miek@miek.nl>
 -- Bugfixes and documentation improvements --
 * Document the use of /dev/null better in rdup.1
 * Knut Franke: generate rdup-backups.1 from configure.ac
 * fixup relative pathname argument in conjunction 
   with the -E (exclude) option (reported by Dave Foster)
   Added: abspath.c


12 Feb 2008: 0.5.5 Miek <miek@miek.nl>
 -- code cleanups and license change: GPL 3 --
 * Changed license to GPL 3
 * Print the octal mode (%b) with 4 digits to also allow