@@ -1,8 +1,8 @@
 #!/bin/bash
 
 # updates a hardlinked backup
-# licensed under the GPL version 2
-# Copyright Miek Gieben, 2007
+# licensed under the GPL version 3
+# Copyright Miek Gieben, 2007 - 2008
 
 prefix=@prefix@
 datarootdir=@datarootdir@
@@ -132,11 +132,6 @@ if [[ $# -eq 0 ]]; then
 	exit
 fi
 
-# fix lonely root arg
-IDENT=`ident_root $(basename $1)`
-STAMP=$etc/$HOSTNAME.$IDENT.timestamp
-LIST=$etc/$HOSTNAME.$IDENT.list
-
 i=1; last=$#; DIRS=
 while [[ $i -lt $last ]]; do
 	DIRS="$DIRS $1"
@@ -175,7 +170,7 @@ if [[ ${dest:0:1} == "/" ]]; then
 	BACKUPDIR=$dest
 fi
 
-# no hits above, asume relative filename
+# no hits above, assume relative filename
 if [[ -z $BACKUPDIR ]]; then
 	BACKUPDIR=`pwd`/$dest
 fi
@@ -184,6 +179,11 @@ if [[ -z $BACKUPDIR ]]; then
         usage
 	exit 1
 fi
+
+IDENT=`ident_root $BACKUPDIR`
+STAMP=$etc/timestamp$HOSTNAME_$IDENT
+LIST=$etc/list$HOSTNAME_$IDENT
+OPTIONS=$etc/options$HOSTNAME_$IDENT  # TODO, keep a list of options
 
 create_rdup $etc
 
