@@ -49,12 +49,10 @@ what() {
 # fix the name argument when backing up /
 ident_root() {
         if [[ $1 = "/" ]]; then
-                IDENT="ROOT"
+                echo ROOT
         else
-                IDENT=$1
+                echo $@
         fi
-        echo "$IDENT"
-        return 0
 }
 
 # create ~/.rdup
